tests/snapshots/examples_fixtures/Modules__Purple__Muse.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Purple/Muse.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.Purple.Muse` doesn't match file path `examples/Modules/Purple/Muse.flx`.

  --> examples/Modules/Purple/Muse.flx:1:1
  |
1 | module Modules.Purple.Muse {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
